Ver.1.0.4:
+ added Qt5 gui (by default)
+ added notifications

Ver.1.0.3:
+ [plasmoid] edited russian translation
* [all] refactoring

Ver.1.0.2:
* [plasmoid] fix layout margins

Ver.1.0.1:
- [all] removed scripts

Ver.1.0:
First release